Fix splits clipping on recent pb pushout

--- a/src/app/leaderboard/leaderboard.component.scss
+++ b/src/app/leaderboard/leaderboard.component.scss
@@ -198,7 +198,7 @@ hr {
 
 .sidenav {
     padding: 11px 0 0 8px;
-    min-width: 200px;
+    min-width: 240px;
     width: 25%;
     max-width: 500px;
     background: rgba(0, 0, 0, 0);
